Add limit message Add API request

--- a/plugin/ui.html
+++ b/plugin/ui.html
@@ -5,6 +5,15 @@
 <script>
   function checkSubscription(event) {
     event.preventDefault();
-    console.log(event);
+    const email = event.target[0]?.value;
+    parent.postMessage(
+      {
+        pluginMessage: {
+          type: "checkEmail",
+          email,
+        },
+      },
+      "*"
+    );
   }
 </script>
